--- a/blog/binary_ising_mf.ipynb
+++ b/blog/binary_ising_mf.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "\n",
     "beta_c = 1.1108\n",
-    "num_spins = 512\n",
+    "N = 512\n",
     "steps = jnp.arange(0, 128)"
    ]
   },
@@ -113,7 +113,7 @@
     "key = jax.random.PRNGKey(2666)\n",
     "params_key, _ = jax.random.split(key)\n",
     "\n",
-    "m0 = jnp.ones((1, num_spins))\n",
+    "m0 = jnp.ones((1, N))\n",
     "_, stacked_outputs = simulate(params_key, m0, steps, beta_c, update_fun=update_naive_mf)\n",
     "\n",
     "y = stacked_outputs[0, :, :]\n",
@@ -148,7 +148,7 @@
     "key = jax.random.PRNGKey(2666)\n",
     "params_key, m0_key = jax.random.split(key)\n",
     "\n",
-    "m0 = jnp.ones((1, num_spins))\n",
+    "m0 = jnp.ones((1, N))\n",
     "_, stacked_outputs_naive = simulate(\n",
     "    params_key, m0, steps, beta_c, update_fun=update_naive_mf\n",
     ")\n",
@@ -192,7 +192,7 @@
     "key = jax.random.PRNGKey(2666)\n",
     "params_key, m0_key = jax.random.split(key)\n",
     "\n",
-    "m0 = 5 * jax.random.normal(m0_key, shape=(100, num_spins))\n",
+    "m0 = 5 * jax.random.normal(m0_key, shape=(100, N))\n",
     "_, stacked_outputs_below = simulate(params_key, m0, steps, 0.5 * beta_c)\n",
     "_, stacked_outputs_near = simulate(params_key, m0, steps, beta_c)\n",
     "_, stacked_outputs_above = simulate(params_key, m0, steps, 2 * beta_c)\n",
@@ -243,7 +243,7 @@
     "key = jax.random.PRNGKey(2666)\n",
     "params_key, m0_key = jax.random.split(key)\n",
     "\n",
-    "m0 = jax.random.normal(m0_key, shape=(1, num_spins))\n",
+    "m0 = jax.random.normal(m0_key, shape=(1, N))\n",
     "_, stacked_outputs = jax.vmap(\n",
     "    jax.vmap(simulate, in_axes=(0, None, None, None)), in_axes=(None, None, None, 0)\n",
     ")(\n",
