Add blog notebooks

--- a/blog/binary_ising_mf.ipynb
+++ b/blog/binary_ising_mf.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Mean-field theory of asymmetric Ising models with binary spins (in JAX)"
+    "# Mean-field theory of asymmetric Ising models with binary spins"
    ]
   },
   {
